<resources>
    <string name="app_name">TiendaDCero_v1.0</string>
    <string name="Productos">Productos</string>
    <string name="Precio">Precio</string>
    <string name="Nombre_del_producto">Nombre del producto</string>
    <string name="Carpinteria">Carpintería</string>
    <string name="Construccion">Construcción</string>
    <string name="Plomeria">Plomerìa</string>
    <string name="Categoria_plomeria">Categoría plomería</string>
    <string name="Categoria_construccion">Categoría construcción</string>
    <string name="Categoria_carpinteria">Categoría carpintería</string>
    <string name="Mostrar_Ocultar">Mostrar/Ocultar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Editar">Editar</string>
    <string name="Agregar_producto">Agregar producto</string>
    <string name="Producto">Producto</string>
    <string name="Descripcion">Descripción</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Agregar">Agregar</string>
    <string name="Vsibilidad">Visibilidad</string>
    <string name="_0CUP">0.00 CUP</string>
    <string name="Sobre_nosotros">Sobre nosotros</string>
    <string name="Sobre_los_desarrolladores">Sobre los desarrolladores</string>
    <string name="Terminos_de_uso">Términos de uso</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Imagen_de_la_empresa">Imagen de la empresa</string>
    <string name="Mipyme_d_cero">Mipyme D\'Cero</string>
    <string name="Contacto">Contacto</string>
    <string name="Carrito">Carrito</string>
    <string name="Correo">Correo</string>
    <string name="Numero_de_telefono">Número de teléfono</string>
    <string name="_5352364120">+5352364120</string>
    <string name="dcero_srl_gmail_com">dcero.srl@gmail.com</string>
    <string name="Se_ha_producido_un_error">Se ha producido un error</string>
    <string name="Revise_su_conexion">Revise su conexión a Internet e intente de nuevo</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Agregando_producto">Agregando producto</string>
    <string name="Espere">Por favor, espere…</string>
    <string name="existe_ya_producto_con_este_nombre">Existe ya un producto con este nombre</string>
</resources>