<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Head head-->
    <ImageView
        android:scaleType="centerCrop"
        android:contentDescription="@string/Imagen_de_la_empresa"
        android:id="@+id/header_header"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_empresarial_color"/>

    <!--Informacion-->
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="12sp"
            android:layout_marginStart="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contacto"
            android:textSize="@dimen/medium"/>

        <!--Email-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="12sp"
            android:layout_marginStart="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/Correo"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/mail"/>

            <TextView
                android:layout_marginStart="4sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium"
                android:text="@string/dcero_srl_gmail_com"/>

        </LinearLayout>

        <!--Phone Number-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="12sp"
            android:layout_marginStart="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/Numero_de_telefono"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/call"/>

            <TextView
                android:layout_marginStart="4sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium"
                android:text="@string/_5352364120"/>



        </LinearLayout>

        <View
            android:layout_marginTop="20sp"
            android:layout_marginEnd="40sp"
            android:layout_marginStart="40sp"
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@color/white_gray"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>