<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Image and price-->
    <androidx.cardview.widget.CardView
        android:id="@+id/recycler_cv_image"
        app:cardCornerRadius="20sp"
        android:layout_margin="20sp"
        android:layout_width="match_parent"
        android:layout_height="385sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="12sp"
        android:elevation="12sp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/shopping_bag"
                app:tint="#C8C7C7"
                android:contentDescription="@string/Productos"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Precio"
                android:layout_gravity="end"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="12sp"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <!--Name-->
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_cv_image"
        android:text="@string/Nombre_del_producto"
        android:textSize="@dimen/xx_large">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>